--- a/CSSWork/style.css
+++ b/CSSWork/style.css
@@ -5,13 +5,13 @@ body{
 {
     background-color: bisque;
 }*/ 
-.container{
+/*.myparagraph{
     background-color: blue;
     height: 400px;
     border: 2px solid red;
     
-}
-/*.child1{
+}*/
+/*.{
     background-color: brown;
     color: white;
     height: 300px;
@@ -21,6 +21,41 @@ body{
     padding: 100px 50px 40px;
     box box-sizing: border-box;
 }*/
-div p{
+/*.myparagraph{
       background-color: yellow;
+}*/
+/*#myid{
+    background-color: brown;
+}*/
+ .container{
+    background-color: cadetblue;
+    height: 400%;
+    width: 100%;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
+} 
+.child1,.child2,.child3{
+    height: 200px;
+    border: 1px dotted blue;
+    width: 300px;
+    /* display: inline-block;
+    padding: 20px;
+    margin: 20px;  */
+   
+
 }
+.child1{
+   
+   background-color: burlywood;
+}
+.child2{
+   
+   background-color: chocolate;
+   flex-basis: 50%;
+}
+.child3{
+   
+   background-color: rgb(73, 107, 7);
+}
+
